<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passbox</string>
    <string name="desc">Image description</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.mcdev.passbox</string>

    <string name="drawer_title">Navigation</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="drawer_title_collection">Passwords</string>
    <string name="drawer_title_settings">Impostazioni</string>
    <string name="drawer_title_about">About</string>
    
    <string name="preferences_category_security">Sicurezza</string>
    <string name="preferences_change_main_key">Cambia la main password</string>
    <string name="preferences_change_main_key_summary">Definisci una nuova main password da sostituire a quella attuale.</string>
    <string name="preferences_category_database">Database</string>
    <string name="preferences_export">Esporta</string>
    <string name="preferences_export_summary">Esporta in un file di backup criptato tutte le password salvate finora.</string>
    <string name="preferences_import">Importa</string>
    <string name="preferences_import_summary">Importa le tue password da un file di backup.</string>
    <string name="preferences_restore">Ripristina</string>
    <string name="preferences_restore_summary">Svuota il database dell\'applicazione eliminando tutte le password salvate finora.</string>
    
    <string name="cancel">Annulla</string>
    <string name="the_end">Fine</string>
    <string name="retry">Riprova</string>

    <string name="export_default_message">Questa operazione creerà un file di backup criptato che potrai utilizzare in futuro per importare tutte le password salvate finora.</string>
    <string name="export_ok_title">Fatto</string>
    <string name="export_ok_message">Ora puoi trovare il file "Passbox.db" nella cartella "Passbox". Puoi caricarlo su qualunque Cloud Storage come Dropbox o Google Drive, per poi usarlo quando ne hai il bisogno su qualsiasi dispositivo, ma attenzione a non dimenticare la main password attuale, altrimenti non potrai importarlo correttamente.</string>
    <string name="export_ko_title">Ops&#8230;</string>
    <string name="export_ko_message">Backup fallito. </string>
    <string name="export_ko_exception_1">La memoria esterna del dispositivo non è abilitata per essere scritta da un\'applicazione.</string>
    <string name="export_ko_exception_2">L cartella </string>
    <string name="export_ko_exception_3">Backup fallito. </string>

    <string name="import_default_message">Importa tutte le tue password da un file di backup creato in precedenza. È necessario conoscere la main password utilizzata per creare il file di backup.</string>
    <string name="import_ok_title">Fatto</string>
    <string name="import_ok_message">Ottimo lavoro! Ora ricorda che la main password è la stessa di quando hai creato il backup.</string>
    <string name="import_ko_title">Ops&#8230;</string>
    <string name="import_ko_message">Backup fallito. </string>
    <string name="import_ko_exception_1">La memoria esterna del dispositivo non è abilitata per essere letta da un\'applicazione.</string>
    <string name="import_ko_exception_2">L cartella </string>
    <string name="import_ko_exception_3">Backup fallito. </string>
    <string name="import_choose_file">Scegli il file di backup</string>
    <string name="import_choose_file_up">Torna alla cartella precedente&#8230;</string>
    <string name="import_choose_directory">Seleziona cartella</string>

    <string name="restore_default_message">ATTENZIONE: Tutte le password salvate finora andranno perse per sempre. Se non vuoi perderle crea prima un backup dalla sezione "Esporta"</string>
    <string name="restore_ok_title">Fatto</string>
    <string name="restore_ok_message">Ora il tuo database è vuoto. Puoi riempirlo inserendo una a una le tue password o puoi importarle tutte insieme da un backup (se ne hai uno). Buon lavoro ;)</string>

    <string name="about_version">Versione</string>
    <string name="about_bug">Segnala un bug</string>
    <string name="about_rate">Vota l\'app sul Play Store</string>
    <string name="about_credits">Credits</string>
    <string name="about_credits_email">corvagliamattia@gmail.com</string>
    <string name="about_credits_message">Passbox\nL\'applicazione ideale per gestire le tue password. La prima app che ti consente di aggiungere chiavi di recupero, PIN, PUK e qualsiasi altro codice relativo ad una password, la più sicura grazie alla cifratura AES 256, che ti garantisce un livello di sicurezza affidabile e ottimizzato. Inoltre grazie al sistema di visualizzazione HOLD-TO-READ sarai al sicuro anche dagli spioni :) Grafica curata e funzionalità utili come il backup e il ripristino offrono tutto ciò che un manager di password deve avere.\n\nAutore:\nMattia Corvaglia\ncorvagliamattia@gmail.com\nhttp://www.mattiacorvaglia.com</string>

    <string name="action_settings">Impostazioni</string>
    <string name="action_edit">Modifica</string>
    <string name="action_remove">Elimina</string>
    <string name="action_color_picker">Cambia colore</string>
    <string name="action_done">Salva</string>
    <string name="action_add_recovery">Aggiungi una recovery password</string>
    <string name="action_choose_email_client">Scegli quale client email usare</string>
    <string name="action_clipdata_copied">Password copiata negli appunti.</string>

    <string name="error_add_pwd">Devi inserire una password</string>
    <string name="error_add_title">Devi inserire un\'etichetta</string>
    <string name="error_add_question">Devi inserire un\'etichetta</string>
    <string name="error_add_answer">Devi inserire un codice</string>
    <string name="error_encryption">Errore nel criptare la password</string>
    <string name="error_decryption">Errore nel decriptare la password</string>
    <string name="error_storing">Errore nel salvare le modifiche nel database</string>
    <string name="error_get_login">Il database è compromesso. Effettua la pulizia dei dati dalla pagina delle informazioni dell\'app.</string>
    <string name="error_recrypt">Il database è compromesso. Effettua la pulizia dei dati dalla pagina delle informazioni dell\'app.</string>

	<string name="title">Nome</string>
	<string name="description">Descrizione</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="web_url">Website</string>
	<string name="note">Note</string>
	<string name="question">Etichetta</string>
	<string name="answer">Codice</string>

	<string name="login">Accedi</string>
	
	<string name="k1">1</string>
	<string name="k2">2</string>
	<string name="k3">3</string>
	<string name="k4">4</string>
	<string name="k5">5</string>
	<string name="k6">6</string>
	<string name="k7">7</string>
	<string name="k8">8</string>
	<string name="k9">9</string>
	<string name="k0">0</string>
	
	<string name="welcome">Benvenuto</string>
	<string name="confirm">Conferma</string>
	<string name="save">Salva</string>
	<string name="set_auth_code">È ora di scegliere la tua main password. Basterà ricordare solo questa per trovare tutte le altre!</string>
	<string name="set_password">Può avere da 4 a 8 cifre.</string>
	<string name="repeat_password">Ripeti la password per confermarla.</string>
	<string name="repeat_process">Hai inserito due password diverse. Ripeti l\'operazione. La password può avere da 4 a 8 cifre.</string>
	<string name="ok_password">Congratulazioni. Ora le tue password sono al sicuro!</string>
	<string name="ok_password_confirmed">Ottimo lavoro!</string>
	<string name="ok_saving">Salvataggio&#8230;</string>
	<string name="ok_loading">Caricamento&#8230;</string>
	<string name="wrong_password">Password errata. Riprova.</string>
	<string name="empty_collection">Nessuna password salvata.</string>
	
    <string name="color_picker_default_title">Scegli un colore</string>
    <string name="color_swatch_description">Color</string>
    <string name="color_swatch_description_selected">Color selected</string>
    
    <string-array name="default_color_choice_values" translatable="false">
        <item>#f44336</item> <!-- Red -->
        <item>#e91e63</item> <!-- Pink -->
        <item>#9c27b0</item> <!-- Purple -->
        <item>#673ab7</item> <!-- Deep purple -->
        <item>#3f51b5</item> <!-- Indigo -->
        <item>#2196f3</item> <!-- Blue -->
        <item>#03a9f4</item> <!-- Light blue -->
        <item>#00bcd4</item> <!-- Cyan -->
        <item>#009688</item> <!-- Teal -->
        <item>#4caf50</item> <!-- Green -->
        <item>#8bc34a</item> <!-- Light green -->
        <item>#cddc39</item> <!-- Lime -->
        <item>#ffeb3b</item> <!-- Yellow -->
        <item>#ffc107</item> <!-- Amber -->
        <item>#ff9800</item> <!-- Orange -->
        <item>#ff5722</item> <!-- Deep orange -->
        <item>#757575</item> <!-- Grey -->
        <item>#cccccc</item> <!-- Light grey -->
    </string-array>

    <string-array name="homescreen_color_choice_values" translatable="false">
        <item>#ffffff</item>
        <item>#000000</item>
    </string-array>
	
</resources>
